[package]
name = "cheese13"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.142"
wasm-bindgen = "0.2.100"
wasm-pack = "0.13.1"
getrandom = { version = "0.3", features = ["wasm_js"] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = true
debuginfo-level = 2

[profile.fast]
inherits = "release"
lto = "fat"
codegen-units = 1

[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']